# homunbot

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPARISON.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  PROJECT.md  README.md  ROADMAP.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e-ci.yml  e2e-smoke.yml  sandbox-validation.yml
.playwright-cli/: page-2026-03-10T19-31-40-350Z.yml  page-2026-03-10T19-34-03-145Z.yml  page-2026-03-10T19-34-40-956Z.yml  page-2026-03-10T19-35-33-833Z.yml  page-2026-03-10T19-38-50-848Z.yml  page-2026-03-10T19-39-16-657Z.yml  page-2026-03-10T19-39-41-092Z.yml  page-2026-03-10T19-39-57-181Z.yml  page-2026-03-10T19-40-06-646Z.yml  page-2026-03-10T19-40-30-756Z.yml  page-2026-03-10T19-40-59-790Z.yml  page-2026-03-10T19-41-15-494Z.yml  page-2026-03-10T19-42-08-614Z.yml  page-2026-03-10T19-42-28-356Z.yml  page-2026-03-10T19-42-38-466Z.yml  page-2026-03-10T19-42-46-405Z.yml  page-2026-03-10T19-42-53-334Z.yml  page-2026-03-10T19-43-50-905Z.yml  page-2026-03-10T19-44-45-592Z.yml  page-2026-03-10T19-45-32-096Z.yml  page-2026-03-10T19-45-49-690Z.yml  page-2026-03-10T19-46-19-658Z.yml  page-2026-03-10T19-46-41-012Z.yml  page-2026-03-10T19-48-03-707Z.yml  page-2026-03-10T19-48-46-647Z.yml  page-2026-03-10T19-49-00-123Z.yml  page-2026-03-10T19-49-36-058Z.yml  page-2026-03-10T19-49-53-169Z.yml  page-2026-03-10T19-50-19-473Z.yml  page-2026-03-10T19-50-37-756Z.yml  page-2026-03-10T19-51-18-593Z.yml  page-2026-03-10T19-51-25-033Z.yml  page-2026-03-10T19-51-32-900Z.yml  page-2026-03-10T19-52-07-042Z.yml  page-2026-03-10T19-52-16-609Z.yml  page-2026-03-10T19-52-34-842Z.yml  page-2026-03-10T19-52-59-350Z.yml  page-2026-03-10T19-53-04-818Z.yml  page-2026-03-10T19-53-19-862Z.yml  page-2026-03-10T19-53-41-752Z.yml  (+34 more)
bridge/: package-lock.json  package.json  tsconfig.json
bridge/src/: index.ts  server.ts  whatsapp.ts
docker/: config.docker.toml
docker/sandbox-runtime/: Dockerfile
docs/: AUDIT-2026-03.md  DEVELOPMENT.md  GETTING-STARTED.md  IMPLEMENTATION-GAPS.md  REFACTOR-REPORT.md  REMOTE-ACCESS.md  ROADMAP.md  SANDBOX-EXECUTION-PLAN.md  SANDBOX-RUNTIME-BASELINE.md  STATUS-SUMMARY.md  TASKS_CHANNELS.md  TASKS_DOCS.md  TASKS_ENTERPRISE.md  TASKS_SECURITY.md  TESTING-GUIDE.md  TRUST-MODEL.md  UNIFIED-ROADMAP.md  frankenstein-evaluation.md  openapi.yaml  security.md  status.md
docs/architecture/: browser-tool.md  memory.md
docs/competitors/: homun-status.md  homun-vs-openclaw-realistic-analysis.md  openclaw.md  zeroclaw.md
docs/design/: CHANNEL-REDESIGN-SPEC.md  MULTI-AGENT-SPEC.md  ONBOARDING-SPEC.md  REDESIGN-SPEC.md  design-constitution.md  mcp-onboarding-semplificato.md  ui-quality-gate.md
docs/services/: CONTACTS-SPEC.md  README.md  TEMPLATE.md  agent-and-gateway.md  automation-and-workflows.md  browser.md  business.md  channels.md  memory-and-knowledge.md  providers.md  runtime-and-config.md  security.md  service-management.md  skills-and-mcp.md  storage-and-sessions.md  tools.md  web-control-plane.md
docs/specs/: PROFILES.md
migrations/: 001_initial.sql  002_memory_chunks.sql  003_users.sql  004_token_usage.sql  005_email_pending.sql  006_automations.sql  007_automation_triggers.sql  008_automation_plan.sql  009_web_chat_runs.sql  010_web_chat_run_model.sql  011_rag_knowledge.sql  012_rag_sensitive_chunks.sql  013_workflows.sql  014_automation_workflow.sql  015_business.sql  016_skill_audit.sql  017_web_auth.sql  018_automation_flow.sql  019_vault_access_log.sql  020_contacts.sql  021_pending_notify.sql  022_contact_tone.sql  023_persona.sql  024_memory_contact_scope.sql  025_contact_agent_override.sql  026_step_agent_id.sql  027_memory_agent_scope.sql  028_memory_importance.sql  029_memory_summaries.sql  030_trusted_devices.sql  031_token_expiry.sql  032_workflow_automation_link.sql  033_drop_cron_jobs.sql  034_profiles.sql  035_profile_scoping.sql  036_profile_scoping_phase2.sql
mobile-app/: app.js  index.html  styles.css
output/playwright/: browser-smoke.snapshot.txt  browser-tool-flow.snapshot.txt  chat-attachment.snapshot.txt  chat-mcp-picker.snapshot.txt  chat-multi-session.snapshot.txt  chat-restore-run.snapshot.txt  chat-send-stop.snapshot.txt  webui-chat-smoke.snapshot.txt
recipes/: brave-search.toml  github.toml  gitlab.toml  gmail.toml  google-calendar.toml  google-drive.toml  google-maps.toml  google-workspace.toml  home-assistant.toml  jira.toml  linear.toml  notion.toml  reddit.toml  sentry.toml  slack.toml  spotify.toml  stripe.toml  todoist.toml  twitter.toml  wordpress.toml
scripts/: build_sandbox_runtime_image.sh  e2e_browser_smoke.sh  e2e_browser_tool_flow.sh  e2e_chat_attachment_smoke.sh  e2e_chat_mcp_picker_smoke.sh  e2e_chat_multi_session.sh  e2e_chat_restore_run.sh  e2e_chat_send_stop.sh  e2e_chat_suite.sh  e2e_ci_suite.sh  e2e_webui_smoke.sh  playwright_cli.sh
scripts/fixtures/: browser_tool_flow.html
scripts/lib/: playwright_e2e.sh
skills/code-review/: SKILL.md
skills/daily-briefing/: SKILL.md
skills/design-system-guardian/: SKILL.md
skills/ui-critic/: SKILL.md
skills/ui-implementer/: SKILL.md
src/: logs.rs  main.rs  mcp_setup.rs
src/agent/: agent_loop.rs  attachment_router.rs  auth.rs  bootstrap_watcher.rs  browser_context.rs  browser_task_plan.rs  context.rs  context_compactor.rs  debounce.rs  definition.rs  email_approval.rs  embeddings.rs  execution_plan.rs  gateway.rs  heartbeat.rs  index_meta.rs  iteration_budget.rs  llm_caller.rs  memory.rs  memory_db.rs  memory_search.rs  mod.rs  persona.rs  profile_resolver.rs  registry.rs  skill_activator.rs  stop.rs  subagent.rs  tool_builder.rs  tool_veto.rs  verifier.rs
src/browser/: action_policy.rs  actions.rs  diff.rs  helpers.rs  manager.rs  mcp_bridge.rs  mod.rs  snapshot.rs  tab_session.rs  tool.rs
src/bus/: mod.rs  queue.rs
src/business/: db.rs  engine.rs  mod.rs
src/channels/: capabilities.rs  cli.rs  discord.rs  email.rs  health.rs  mcp_channel.rs  mod.rs  slack.rs  telegram.rs  telegram_frankenstein.rs  (+2 more)
tests/: sandbox_e2e.rs  sandbox_linux_native.rs  sandbox_runtime_image.rs
(+232 files in other folders)
