[package]
name = "homun"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Ultra-lightweight personal AI assistant — a digital homunculus in your computer"
license = "MIT"
repository = "https://github.com/homunbot/homun"
keywords = ["ai", "agent", "assistant", "bot", "skills"]
categories = ["command-line-utilities"]

[[bin]]
name = "homun"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
# Teloxide uses reqwest 0.11, so we need a separate instance for the Telegram client
reqwest-011 = { package = "reqwest", version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Skill frontmatter parsing
gray_matter = "0.2"

# Regex (shell safety filters)
regex = "1"

# Hostname for runtime info
hostname = "0.4"
whoami = "1.5"

# Directories
dirs = "6"

# Archive extraction (skill installer)
flate2 = "1"
tar = "0.4"

# UUID for session/message IDs
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }

# WhatsApp native client (wa-rs — fork of jlucaso1/whatsapp-rust)
wa-rs = { git = "https://github.com/homunbot/wa-rs", rev = "d369582" }
wa-rs-sqlite-storage = { git = "https://github.com/homunbot/wa-rs", rev = "d369582" }
wa-rs-tokio-transport = { git = "https://github.com/homunbot/wa-rs", rev = "d369582" }
wa-rs-ureq-http = { git = "https://github.com/homunbot/wa-rs", rev = "d369582" }
wa-rs-core = { git = "https://github.com/homunbot/wa-rs", rev = "d369582" }
wa-rs-proto = { git = "https://github.com/homunbot/wa-rs", rev = "d369582" }
futures-util = "0.3"

# Streaming support
tokio-stream = "0.1"
eventsource-stream = "0.2"
pin-project-lite = "0.2"

# TUI (terminal user interface)
ratatui = "0.29"
crossterm = "0.28"

# File watcher (skill hot-reload)
notify = "7"

# MCP (Model Context Protocol) client
rmcp = { version = "0.15", features = ["client", "transport-child-process"] }

# Web UI (embedded dashboard)
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
pulldown-cmark = "0.12"

# Security - Encrypted secrets storage
ring = "0.17"           # AES-256-GCM, HKDF
base64 = "0.22"         # Encoding
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }  # OS keychain (macOS/Linux/Windows)
zeroize = "1"           # Secure memory zeroing

# Security - TOTP 2FA
totp-rs = { version = "5", features = ["qr"] }  # TOTP with QR code generation
rand = "0.8"            # Random generation for recovery codes

# Memory - Embedding + Vector search
fastembed = "5"         # Local ONNX embedding (multilingual, 384-dim)
usearch = "2"           # HNSW vector index (O(log N), 320KB)

# Browser automation (chromiumoxide for CDP)
chromiumoxide = "0.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
