[package]
name = "homun"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Ultra-lightweight personal AI assistant — a digital homunculus in your computer"
license = "MIT"
repository = "https://github.com/homunbot/homun"
keywords = ["ai", "agent", "assistant", "bot", "skills"]
categories = ["command-line-utilities"]

[[bin]]
name = "homun"
path = "src/main.rs"

# =============================================================================
# FEATURE FLAGS
# =============================================================================
# 
# Build variants:
#   cargo build --release                              # Core (~15MB)
#   cargo build --release --features gateway            # Gateway (~40MB)
#   cargo build --release --features full               # Full (~50MB)
#
[features]
default = ["cli", "web-ui", "file-tools", "shell-tool", "web-tools", "cron-tool", "message-tool", "vault-2fa", "mcp", "browser"]

# === Core Features ===
cli = ["dep:clap", "dep:ratatui", "dep:crossterm"]
web-ui = ["cli", "dep:axum", "dep:tower", "dep:tower-http", "dep:rust-embed", "dep:mime_guess", "dep:pulldown-cmark",
           "dep:tokio-rustls", "dep:rustls-pemfile", "dep:rcgen", "dep:hyper-util"]
file-tools = []
shell-tool = []
web-tools = []
cron-tool = []
message-tool = []

# === Channels (optional) ===
channel-telegram = ["dep:frankenstein"]
channel-discord = ["dep:serenity"]
channel-whatsapp = ["dep:wa-rs", "dep:wa-rs-sqlite-storage", "dep:wa-rs-tokio-transport",
                    "dep:wa-rs-ureq-http", "dep:wa-rs-core", "dep:wa-rs-proto", "dep:futures-util"]
channel-email = ["dep:lettre", "dep:mail-parser", "dep:async-imap", "dep:tokio-rustls", "dep:webpki-roots", "dep:rustls-pki-types"]
channel-webhook = []  # Built-in, uses axum

# === Providers (optional enhancements) ===
providers-openai-compat = ["dep:eventsource-stream", "dep:pin-project-lite"]

# === Advanced Features ===
local-embeddings = ["dep:fastembed", "dep:usearch", "dep:lru", "dep:pdf-extract", "dep:calamine", "dep:zip", "dep:quick-xml"]
browser = ["mcp"]
mcp = ["dep:rmcp"]
vault-2fa = ["dep:totp-rs"]

# === Meta Features ===
gateway = ["cli", "web-ui", "file-tools", "shell-tool", "web-tools", "cron-tool", "message-tool",
           "channel-telegram", "channel-discord", "channel-whatsapp", "channel-email", "channel-webhook",
           "providers-openai-compat", "local-embeddings", "mcp"]

full = ["gateway", "browser", "vault-2fa"]

[dependencies]
# =============================================================================
# CORE DEPENDENCIES (always required)
# =============================================================================
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client (for providers and tools)
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Skill frontmatter parsing
gray_matter = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for session/message IDs
uuid = { version = "1", features = ["v4"] }

# Directories
dirs = "6"

# Hostname for runtime info
hostname = "0.4"
whoami = "1.5"

# Security - Encrypted secrets storage (core)
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
# TLS: rustls requires explicit CryptoProvider since v0.23
# Multiple transitive deps enable both ring and aws-lc-rs, so we pin ring
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
zeroize = "1"

# File watcher (skill hot-reload)
notify = "8"

# Streaming support
tokio-stream = "0.1"

# Cron scheduling
cron = "0.15"

# =============================================================================
# OPTIONAL DEPENDENCIES (feature-gated)
# =============================================================================

# --- CLI feature ---
clap = { version = "4", features = ["derive"], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }

# --- Web UI feature ---
axum = { version = "0.8", features = ["ws", "multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
rust-embed = { version = "8", features = ["compression"], optional = true }
mime_guess = { version = "2", optional = true }
pulldown-cmark = { version = "0.13", optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"], optional = true }

# --- Shell tool feature ---
regex = { version = "1" }

# --- OpenAI-compatible providers (streaming) ---
eventsource-stream = { version = "0.2", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# --- Telegram channel ---
frankenstein = { version = "0.47", default-features = false, features = ["client-reqwest"], optional = true }

# --- Discord channel ---
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"], optional = true }

# --- WhatsApp channel ---
wa-rs = { git = "https://github.com/homunbot/wa-rs", rev = "d369582", optional = true }
wa-rs-sqlite-storage = { git = "https://github.com/homunbot/wa-rs", rev = "d369582", optional = true }
wa-rs-tokio-transport = { git = "https://github.com/homunbot/wa-rs", rev = "d369582", optional = true }
wa-rs-ureq-http = { git = "https://github.com/homunbot/wa-rs", rev = "d369582", optional = true }
wa-rs-core = { git = "https://github.com/homunbot/wa-rs", rev = "d369582", optional = true }
wa-rs-proto = { git = "https://github.com/homunbot/wa-rs", rev = "d369582", optional = true }
futures-util = { version = "0.3", optional = true }

# --- Local embeddings ---
fastembed = { version = "5", optional = true }
usearch = { version = "2", optional = true }
lru = { version = "0.16", optional = true }

# --- Advanced document parsers (feature-gated under local-embeddings) ---
pdf-extract = { version = "0.10", optional = true }
calamine = { version = "0.32", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
quick-xml = { version = "0.37", optional = true }

# --- MCP client (also powers browser via @playwright/mcp) ---
rmcp = { version = "0.16", features = ["client", "transport-child-process"], optional = true }

# --- Vault 2FA ---
totp-rs = { version = "5", features = ["qr"], optional = true }
rand = "0.10"

# --- Email channel ---
lettre = { version = "0.11", optional = true, default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = { version = "0.11", optional = true }
async-imap = { version = "0.11", optional = true, default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", optional = true, features = ["ring"] }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }
rcgen = { version = "0.13", optional = true }
webpki-roots = { version = "0.26", optional = true }

# --- Skill installer (archive extraction) ---
flate2 = "1"
tar = "0.4"

# --- OCR temp files ---
tempfile = "3"

[dev-dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

# =============================================================================
# RELEASE PROFILES
# =============================================================================

# Default release: balanced optimization
[profile.release]
opt-level = "z"        # Optimize for size
lto = "fat"            # Maximum cross-crate optimization
codegen-units = 1      # Serialized codegen for smaller binary
strip = true           # Remove debug symbols
panic = "abort"        # Reduce binary size

# Fast release: faster builds, larger binary
[profile.release-fast]
inherits = "release"
codegen-units = 8      # Parallel codegen for faster builds
opt-level = 3          # Speed over size
